# evosite3d

./: .flake8  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  INSTALL.md  LICENSE  README.md  compute_pI.py  conftest.py  convert_fasta2phylip.py  extract_col_from_seq.py  extract_full_sequences.py  extract_proba_from_rst.py  extract_seq_prob.py  extract_seq_prob_v2.py  extract_sequences.py  get_position_cds_trimal.py  map_on_tree.py  parse_rst.py  parse_taxbrowser.py  pyproject.toml  remove_ensembl_name_in_tree.py  translate_dna.py
lib/: __init__.py  api_utils.py  ensembl.py
research/2026_ebola_outbreak/: README.md  identify_mutations.ipynb
scripts/: _common.py  compute_iso_point.py  convert_fasta2phylip.py  extract_col_from_seq.py  extract_domain_transition.py  extract_full_sequences.py  extract_proba_from_rst.py  extract_seq_prob.py  extract_seq_prob_v2.py  extract_sequences.py  fetch_ensembl_msa_tree.py  get_position_cds_trimal.py  get_position_in_aln.py  map_on_tree.py  mod_analyse_models.py  mod_build_model.py  mod_prepare_inputs.py  move_target_sequence_to_top.py  mpnn_analyse_sequences.py  mpnn_select_sequences.py  ms_comparative_analysis.py  ms_extract_phosphosite_information.py  ms_extract_phosphosites_from_mztab.py  ms_visualisation.py  parse_rst.py  parse_taxbrowser.py  plot_dnds_per_site.py  realign_nuc_on_aa.py  reference_species.py  remove_empty_col.py  remove_ensembl_name_in_tree.py  resolve_ids.py  rfd_analyse_sequences.py  rfd_analyse_structures.py  rfd_analyze_zf_designs.py  rfd_convert_fasta_to_pir.py  rfd_create_multi_zf.py  rfd_create_zf_template.py  rfd_extract_motif.py  rfd_select_best_design.py  (+4 more)
scripts/tests/: test_compute_iso_point.py  test_extract_col_from_seq.py  test_extract_domain_transition.py  test_extract_full_sequences.py  (+8 more)
software/target-ai/: .pre-commit-config.yaml  SKILL.md  open_targets_client.py  pyproject.toml  target_validation_matrix.html  validate.md
software/target-ai/results/: raw_data_braf_kras_vs_cutaneous_melanoma_non-small_cell_lung_carcinoma.json  raw_data_cdk4_cdk6_vs_breast_carcinoma_ovarian_carcinoma.json  raw_data_egfr_vs_non-small_cell_lung_carcinoma.json  raw_data_jak1_jak2_tyk2_jak3_vs_rheumatoid_arthritis.json  raw_data_pcsk9_hmgcr_angptl3_vs_coronary_artery_disease_familial_hypercholesterolemia.json  raw_data_pcsk9_vs_coronary_artery_disease_familial_hypercholesterolemia.json  scores_braf_kras_vs_cutaneous_melanoma_non-small_cell_lung_carcinoma.csv  scores_cdk4_cdk6_vs_breast_carcinoma_ovarian_carcinoma.csv  scores_egfr_vs_non-small_cell_lung_carcinoma.csv  scores_jak1_jak2_tyk2_jak3_vs_rheumatoid_arthritis.csv  scores_pcsk9_hmgcr_angptl3_vs_coronary_artery_disease_familial_hypercholesterolemia.csv  scores_pcsk9_vs_coronary_artery_disease_familial_hypercholesterolemia.csv  validation_braf_kras_vs_cutaneous_melanoma_non-small_cell_lung_carcinoma.md  validation_cdk4_cdk6_vs_breast_carcinoma_ovarian_carcinoma.md  validation_egfr_vs_non-small_cell_lung_carcinoma.html  validation_egfr_vs_non-small_cell_lung_carcinoma.md  validation_jak1_jak2_tyk2_jak3_vs_rheumatoid_arthritis.html  validation_jak1_jak2_tyk2_jak3_vs_rheumatoid_arthritis.md  validation_pcsk9_hmgcr_angptl3_vs_coronary_artery_disease_familial_hypercholesterolemia.md  validation_pcsk9_vs_coronary_artery_disease_familial_hypercholesterolemia.html  validation_pcsk9_vs_coronary_artery_disease_familial_hypercholesterolemia.md
tutorials/: fdr_qvalue.md  foldx.md  foldx4.md  ncbi_taxonomy.md  pervasive_selection.md  site_selection.md
(+262 files in other folders)
