[project]
name = "evosite3d"
version = "0.2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=0.30",
    "biopython>=1.85",
    "datasets>=2.18",
    "jupyter>=1.0",
    "jupyterlab>=1.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "peft>=0.10",
    "PyQt6",
    "scikit-learn>=1.3",
    "scipy>=1.16",
    "seaborn",
    "statsmodels",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchdata==0.8.0",
    "torchvision==0.20.1",
    "transformers>=4.40",
]

[dependency-groups]
dev = [
    "mypy>=1.5.0",
    "pandas-stubs>=2.3.2",
    "pre-commit>=3.0.0",
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
    "scipy-stubs>=1.16,<1.17",
    "ty>=0.0.32",
]

[tool.ruff]
target-version = "py312"
include = ["*.py", "*.pyi"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests", "software/tests", "tutorials/tests"]
