[project]
name = "evosite3d"
version = "0.2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=0.30",
    "biopython>=1.87",
    "chembl-webresource-client>=0.10.9",
    "datasets>=2.18",
    "jupyter>=1.0",
    "jupyterlab>=1.0",
    "matplotlib>=3.10.9",
    "mdtraj>=1.11",
    "numpy>=2.4.3",
    "openmm>=8.5.1",
    "openmmforcefields>=0.15.1",
    "pandas>=3.0.2",
    "peft>=0.10",
    "PyQt6>=6.11.0",
    "rdkit>=2026.3.1",
    "scikit-learn>=1.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchdata==0.8.0",
    "torch-geometric==2.7.0",
    "torchvision==0.20.1",
    "transformers>=4.40",
]


[dependency-groups]
dev = [
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.32",
]

[tool.ruff]
target-version = "py312"
include = ["*.py", "*.pyi"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests", "software/tests", "tutorials/tests"]
