[project]
name = "target-validation-tool"
version = "0.1.0"
description = "AI-powered drug target validation using the Open Targets Platform"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"